add code climate badge

--- a/templates/readme.md.hbs
+++ b/templates/readme.md.hbs
@@ -4,6 +4,7 @@
 [![Build Status](https://secure.travis-ci.org/{{repo}}/{{name}}.png)](http://travis-ci.org/{{repo}}/{{name}})
 [![Dependency Status](https://gemnasium.com/{{repo}}/{{name}}.png)](https://gemnasium.com/{{repo}}/{{name}})
 [![Coverage Status](https://coveralls.io/repos/{{repo}}/{{name}}/badge.png?branch=master)](https://coveralls.io/r/{{repo}}/{{name}}?branch=master)
+[![Code Climate](https://codeclimate.com/github/{{repo}}/{{name}}.png)](https://codeclimate.com/github/{{repo}}/{{name}})
 
 ## install
 
